log
Thu 09 May 2024 04:01:35 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
8db15e7
Thu 09 May 2024 04:05:45 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
dba3572
Thu 09 May 2024 04:10:34 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
b23fcd0
Thu 09 May 2024 04:13:30 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
08c1650
Thu 09 May 2024 04:19:10 PM UTC: 
 treemap.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 61 insertions(+), 2 deletions(-)
 tests:  0|0
25d7261
Thu 09 May 2024 04:22:13 PM UTC: 
 treemap.c | 61 +------------------------------------------------------------
 1 file changed, 1 insertion(+), 60 deletions(-)
 tests:  15|4
total_score: 25/70
767dab8
Thu 09 May 2024 04:26:06 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:168:1: error: control reaches end of non-void function [-Werror=return-type]
  168 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a996491
Thu 09 May 2024 04:26:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:168:1: error: expected identifier or ‘(’ before ‘}’ token
  168 | }
      | ^
treemap.c: In function ‘upperBound’:
treemap.c:167:1: error: control reaches end of non-void function [-Werror=return-type]
  167 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
831ac00
Thu 09 May 2024 04:26:32 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:167:1: error: control reaches end of non-void function [-Werror=return-type]
  167 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
21943e5
Thu 09 May 2024 04:26:51 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  19|3
total_score: 35/70
e92e2fd
Thu 09 May 2024 04:31:16 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:179:1: error: expected identifier or ‘(’ before ‘}’ token
  179 | }
      | ^
Compilation failed
83d02b2
Thu 09 May 2024 04:31:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 40/70
d8976db
Thu 09 May 2024 04:33:11 PM UTC: 
 treemap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  21|2
total_score: 40/70
2638742
